# mpvipc

./: Cargo.toml  README.md
examples/: fetch_state.rs  media_player.rs
src/: ipc.rs  lib.rs
