[package]
name = "mpvipc"
version = "1.2.1"
authors = ["Jonas Frei <freijon@pm.me>"]
description = "A small library which provides bindings to control existing mpv instances through sockets."
license = "GPL-3.0"
homepage = "https://gitlab.com/mpv-ipc/mpvipc"
repository = "https://gitlab.com/mpv-ipc/mpvipc"
documentation = "https://docs.rs/mpvipc/"
edition = "2018"

[dependencies]
serde = "1.0.138"
serde_json = "1.0.82"
log = "0.4.17"

[dev-dependencies]
env_logger = "0.9.0"
