[package]
name = "mpvipc"
version = "1.3.0"
authors = ["Jonas Frei <freijon@pm.me>"]
description = "A small library which provides bindings to control existing mpv instances through sockets."
license = "GPL-3.0"
homepage = "https://gitlab.com/mpv-ipc/mpvipc"
repository = "https://gitlab.com/mpv-ipc/mpvipc"
documentation = "https://docs.rs/mpvipc/"
edition = "2021"

[dependencies]
serde_json = "1.0.104"
log = "0.4.19"

[dev-dependencies]
env_logger = "0.10.0"
